Update child frame Selection after containing-frame scroll.

This CL ensures that an OOPIF child frame gets the opportunity to update
its selection position prior to the selection handles being made visible
again at the end of a mainframe (or any other frame for that matter)
scroll.

Bug: 763378
Change-Id: If978dc86aa1b3cc5bc4f38a538065c4eed22e35b