content/browser/renderer_host/input/touch_selection_controller_client_manager_android.cc
@@ -144,4 +144,10 @@ TouchSelectionControllerClientManagerAndroid::CreateDrawable() {
   return rwhv_->CreateDrawable();
 }
 
+void TouchSelectionControllerClientManagerAndroid::
+    UpdateSelectionBoundsIfNecessary() {
+  // TODO(wjmaclean): I don't think anything needs to be done here, but verify
+  // this.
+}
+
 }  // namespace content
