content/browser/renderer_host/input/touch_selection_controller_client_manager_android.h
@@ -46,6 +46,7 @@ class TouchSelectionControllerClientManagerAndroid
                                 const gfx::PointF& extent) override;
   void OnSelectionEvent(ui::SelectionEventType event) override;
   std::unique_ptr<ui::TouchHandleDrawable> CreateDrawable() override;
+  void UpdateSelectionBoundsIfNecessary() override;
 
  private:
   RenderWidgetHostViewAndroid* rwhv_;
